--- a/examples/buddhabrot.ipynb
+++ b/examples/buddhabrot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,7 @@
       "mandelbrot:\n",
       "  Kernel count: 3\n",
       "  Intermediate buffers: 1\n",
-      "  Lines of generated code: 543\n",
+      "  Lines of generated code: 548\n",
       "\n"
      ]
     }
@@ -66,6 +66,8 @@
     "\n",
     "        tf.loop(loop_body, 0, 2500, 1)\n",
     "\n",
+    "        tf.if_cond(l >= 2500, lambda: tf.continue_loop())\n",
+    "\n",
     "        z_re.set(z0x)\n",
     "        z_im.set(z0y)\n",
     "\n",
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
